# manclbrot

./: .gitmodules  CMakeLists.txt  README.md
closedcl/: CMakeLists.txt
closedcl/examples/: CMakeLists.txt  square.cpp
closedcl/include/closedcl/: Array.h  Array.hpp  Buffer.h  CommandQueue.h  Context.h  Kernel.h  Program.h  Vector.h  Vector.hpp  device_t.h  error.h  platform_t.h
closedcl/src/: Buffer.cpp  CommandQueue.cpp  Context.cpp  Kernel.cpp  Program.cpp  device_t.cpp  error.cpp  platform_t.cpp
include/manclbrot/: CL_MandelbrotRenderer.h  MandelbrotRenderer.h  MandelbrotRendererInterface.h
kernel/: mandelbrot.cl
src/: CL_MandelbrotRenderer.cpp  MandelbrotRenderer.cpp  MandelbrotRendererInterface.cpp  main.cpp
